--- a/index.html
+++ b/index.html
@@ -1,89 +1,57 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet"href="NEWCSS.css">
-
-    <title>Prajwal Jogi - Professional Portfolio</title>
-
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="NEWCSS.css">
+    <title>NMAMIT Nitte</title>
 </head>
 <body>
     <header>
-        <h1 class="nm1">Prajwal Jogi</h1>
-        <nav>
-            <ul class="menu">
-                <li><a href="mailto:prajwal.jogi@example.com">Email</a></li>
-                <li><a href="https://www.google.com/maps?q=Bantwal" target="_blank" rel="noopener noreferrer">Address: Bantwal</a></li>
-            </ul>
-        </nav>
+        <div class="logo">
+            <img src="/home/prajwal/Downloads/download.png" alt="Institution Logo">
+        </div>
+        <div class="Header-content">
+            <h1>NMAMIT</h1>
+            <p>Deemed to be UNIVERSITY</p>
+            <p>
+                Nitte, Karkala Taluk,<br> 
+                Udupi -574110<br>
+                Karnataka, India
+            </p>
+        </div>
     </header>
+    <nav>
+        <ul class="menu">
+            <li><a href="#">HOME</a></li>
+            <li class="submenu">
+                <a href="#">Department</a>
+                <ul class="SUBMENU-content">
+                    <li><a href="cse.html">DEPARTMENT OF CSE</a></li>
+                    <li><a href="ise.html">DEPARTMENT OF ISE</a></li>
+                </ul>
+            </li>
+            <li><a href="#">Resources</a></li>
+            <li><a href="#">Contact</a></li>
+        </ul>
+    </nav>
+
     <main>
-        <section class="se1">
-            <h2>About Me</h2>
-            <!-- Replaced local image path with a placeholder for web compatibility -->
-            <img src="https://placehold.co/150x150/3498db/ffffff?text=PJ" alt="Prajwal Jogi" />
+        <section class="about">
+            <h2>About College</h2>
             <p>
-                I am Prajwal Jogi, currently pursuing a B.Tech in Computer Science at NMAM Institute of Technology, Nitte. Passionate about software development and cybersecurity, I aim to build innovative solutions and contribute to the tech community.
+                
+                NMAMIT, also known as Nitte Mahalinga Adyanthaya Memorial Institute of Technology, is a constituent college of Nitte (Deemed to be University). It's located in Nitte, Karkala Taluk, Udupi district, Karnataka. The institute offers various undergraduate and postgraduate programs, including engineering and computer applications.
             </p>
-        </section>
-        <section class="se2">
-            <h2>Skills</h2>
-            <ul>
-                <li>Python</li>
-                <li>Java</li>
-                <li>SQL</li>
-                <li>Cybersecurity</li>
-                <li>Blockchain</li>
-                <li>C Programming</li>
-            </ul>
-        </section>
-        <section class="se2">
-            <h2>Internship</h2>
-            <p>
-                Completed an internship at Samgra Technologies, Mangalore, where I worked on a final year project demonstrating spyware functionalities and mitigation techniques.
-            </p>
-        </section>
-        <section class="se2">
-            <h2>Certificates</h2>
-            <ul>
-                <li>Google Coursera - Cybersecurity</li>
-                <li>Oracle AI Foundation</li>
-                <li>Oracle Professional Data Science</li>
-                <li>Microsoft AI Innovation</li>
-            </ul>
-        </section>
-        <section class="se2">
-            <h2>Education</h2>
-            <table>
-                <thead>
-                    <tr>
-                        <th>Qualification</th>
-                        <th>Details</th>
-                    </tr>
-                </thead>
-                <tbody>
-                    <tr>
-                        <td>10th Grade</td>
-                        <td>77%</td>
-                    </tr>
-                    <tr>
-                        <td>Diploma in Computer Science Engineering</td>
-                        <td>9.26 CGPA</td>
-                    </tr>
-                </tbody>
-            </table>
         </section>
     </main>
     <footer>
-        <p>
-            <!-- These are now placeholder links -->
-            <a href="#" style="color: #ecf0f1; text-decoration: none;">LinkedIn</a> |
-            <a href="#" style="color: #ecf0f1; text-decoration: none;">GitHub</a> |
-            <a href="#" style="color: #ecf0f1; text-decoration: none;">Instagram</a> |
-            <a href="#" style="color: #ecf0f1; text-decoration: none;">Twitter</a>
-        </p>
-        <p>&copy; 2025 Prajwal Jogi. All rights reserved.</p>
+        <div class="social-links">
+            <a href="#">Facebook</a>
+            <a href="#">Instagram</a>
+            <a href="#">Twitter</a>
+        </div>
+        <p>&copy; 2025 NMAMIT. All rights reserved.</p>
     </footer>
 </body>
 </html>
