--- a/index.html
+++ b/index.html
@@ -1,52 +1,61 @@
-index2.html
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>Satvik Hegde - Professional Portfolio</title>
-     <link rel="stylesheet" href="NEWCSS.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet"href="NEWCSS.css">
+
+    <title>Prajwal Jogi - Professional Portfolio</title>
+
 </head>
 <body>
     <header>
-        <h1>Satvik hegde</h1>
+        <h1 class="nm1">Prajwal Jogi</h1>
         <nav>
-            <ul>
-                <li><a href="mailto:satvikhegde.9@example.com">Email</a></li>
-                <li>Address: karkala<tytyty/li>
+            <ul class="menu">
+                <li><a href="mailto:prajwal.jogi@example.com">Email</a></li>
+                <li><a href="https://www.google.com/maps?q=Bantwal" target="_blank" rel="noopener noreferrer">Address: Bantwal</a></li>
             </ul>
         </nav>
     </header>
     <main>
-        <section>
+        <section class="se1">
             <h2>About Me</h2>
-            <img src="kanye.jpeg" alt="satvik hegde" width="120" height="120" />
+            <!-- Replaced local image path with a placeholder for web compatibility -->
+            <img src="https://placehold.co/150x150/3498db/ffffff?text=PJ" alt="Prajwal Jogi" />
             <p>
-                I am satvik hegde, currently pursuing a B.Tech in Computer Science at NMAM Institute of Technology, Nitte. Passionate about software development and cybersecurity, I aim to build innovative solutions and contribute to the tech community.
+                I am Prajwal Jogi, currently pursuing a B.Tech in Computer Science at NMAM Institute of Technology, Nitte. Passionate about software development and cybersecurity, I aim to build innovative solutions and contribute to the tech community.
             </p>
         </section>
-        <section>
+        <section class="se2">
             <h2>Skills</h2>
             <ul>
                 <li>Python</li>
                 <li>Java</li>
+                <li>SQL</li>
                 <li>Cybersecurity</li>
+                <li>Blockchain</li>
                 <li>C Programming</li>
             </ul>
         </section>
-        <section>
-            
+        <section class="se2">
+            <h2>Internship</h2>
+            <p>
+                Completed an internship at Samgra Technologies, Mangalore, where I worked on a final year project demonstrating spyware functionalities and mitigation techniques.
+            </p>
         </section>
-        <section>
+        <section class="se2">
             <h2>Certificates</h2>
             <ul>
+                <li>Google Coursera - Cybersecurity</li>
                 <li>Oracle AI Foundation</li>
-                <li>Oracle ai Foundation</li>
+                <li>Oracle Professional Data Science</li>
+                <li>Microsoft AI Innovation</li>
             </ul>
         </section>
-        <section>
+        <section class="se2">
             <h2>Education</h2>
-            <table border="1" cellpadding="8" cellspacing="0">
+            <table>
                 <thead>
                     <tr>
                         <th>Qualification</th>
@@ -56,24 +65,25 @@ index2.html
                 <tbody>
                     <tr>
                         <td>10th Grade</td>
-                        <td>83%</td>
+                        <td>77%</td>
                     </tr>
                     <tr>
-                        <td>puc science</td>
-                        <td>80%</td>
+                        <td>Diploma in Computer Science Engineering</td>
+                        <td>9.26 CGPA</td>
                     </tr>
                 </tbody>
             </table>
         </section>
     </main>
-            <footer>
-                <div class="social-links">
-                    <a href="#">Facebook</a>
-                    <a href="#">Twitter</a>
-                    <a href="#">Instagram</a>
-                </div>
-                <p>&copy; satvik hegde.ALL Rights Reserved</p>
-            </footer>
-    
+    <footer>
+        <p>
+            <!-- These are now placeholder links -->
+            <a href="#" style="color: #ecf0f1; text-decoration: none;">LinkedIn</a> |
+            <a href="#" style="color: #ecf0f1; text-decoration: none;">GitHub</a> |
+            <a href="#" style="color: #ecf0f1; text-decoration: none;">Instagram</a> |
+            <a href="#" style="color: #ecf0f1; text-decoration: none;">Twitter</a>
+        </p>
+        <p>&copy; 2025 Prajwal Jogi. All rights reserved.</p>
+    </footer>
 </body>
 </html>
